fixed layout issue with adding buddies, added ellipsis and forcing text to stay in one line

--- a/app/assets/stylesheets/view_stylesheets/buddies.css.scss
+++ b/app/assets/stylesheets/view_stylesheets/buddies.css.scss
@@ -24,18 +24,31 @@ $button_color: #2ECC71;
 	padding-top: 7px;
 	margin-right: 10px;
 	border-top: 1px #ccc solid;
-
-	.profile-container {
-		display: inline-block;
-		width: 50px;
-		height: 50px;
-		padding: 2px;
-		margin-right: 10px;
-		.profile-image {
+	.friend-info {
+		width: 80%;
+		.profile-image-container {
+			display: inline-block;
 			width: 50px;
 			height: 50px;
+			padding: 2px;
+			margin-right: 10px;
+			float: left;
+			.profile-image {
+				width: 50px;
+				height: 50px;
+			}
+		}
+		.profile-link-container {
+			float: left;
+			max-width: 165px;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			margin-top: 16px;
+			white-space: nowrap;
 		}
 	}
+
+	
 }
 
 .friend-info {
